
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.3.2 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.2

Fixes:

- Colors: Fixed crash when adding a color more than 4 items long


-----------------------------------------------------------------------
 VERSION 0.3.1 (9/7/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.1

Breaking Changes:

- Callbacks: All callbacks are now callables (not strings)
- Separator: Changed "add_seperator" to "add_separator" #188

Changes:
- Widgets: Changed "add_item_color style" to "set_item_color"

New Commands:
- Widgets: Added "clear_item_color"
- App:     Added "set_start_callback" #187

-----------------------------------------------------------------------
 VERSION 0.2.0 (9/5/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.2.0

New Features:

- Context Managers: You can now import dearpygui.wrappers to use context
	manager versions of all containers

Changes:

- Widgets: All "add_widget" commands now return true on successful
	adding or false.

Breaking Changes:

- Container Widgets: Replaced all "end_*" commands with a single "end" command

-----------------------------------------------------------------------
 VERSION 0.1.4 (9/4/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.4

-data source: quick fix to ref count issue that causes crash

-----------------------------------------------------------------------
 VERSION 0.1.3 (9/4/2020)